# ie-acc

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/src/ieacc/: __init__.py  main.py  neo4j_service.py
api/src/ieacc/middleware/: gdpr.py
api/src/ieacc/queries/: entity_connections.cypher  entity_detail.cypher  graph_expand.cypher  patterns.cypher  search.cypher
api/src/ieacc/routers/: entity.py  gdpr.py  graph.py  investigations.py  meta.py  patterns.py  search.py
api/tests/: conftest.py  test_entity.py  test_gdpr.py  test_graph.py  test_health.py  test_investigations.py  test_patterns.py  test_search.py
config/: source_registry_ie.csv
etl/: Dockerfile  pyproject.toml
etl/scripts/: download_charities.sh  download_cro.sh  download_epa.sh  download_etenders.sh  download_lobbying.sh  download_oireachtas.sh  download_ppr.sh
etl/src/ieacc_etl/: __init__.py  base.py  linking_hooks.py  loader.py  runner.py
etl/src/ieacc_etl/entity_resolution/: __init__.py
etl/src/ieacc_etl/pipelines/: __init__.py  charities.py  cro.py  epa.py  etenders.py  lobbying.py  oireachtas.py  ppr.py
etl/src/ieacc_etl/schemas/: cro.py
etl/src/ieacc_etl/transforms/: __init__.py  address_parsing.py  name_normalisation.py
etl/tests/: conftest.py  test_address_parsing.py  test_base.py  test_charities_pipeline.py  test_cro_pipeline.py  test_epa_pipeline.py  test_etenders_pipeline.py  test_linking_hooks.py  test_loader.py  test_lobbying_pipeline.py  test_name_normalisation.py  test_oireachtas_pipeline.py  test_ppr_pipeline.py
etl/tests/fixtures/charities/: charities.csv
etl/tests/fixtures/cro/: companies.csv
etl/tests/fixtures/epa/: licences.csv
etl/tests/fixtures/etenders/: contracts.csv
etl/tests/fixtures/lobbying/: returns.csv
etl/tests/fixtures/oireachtas/: members.json
etl/tests/fixtures/ppr/: sales.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: EntityCard.test.tsx  EntityCard.tsx  GraphCanvas.tsx  (+2 more)
infra/: Caddyfile
infra/neo4j/: init.cypher
infra/scripts/: seed-dev.cypher  seed-dev.sh
scripts/ci/: frontend_quality.sh  python_quality.sh
(+11 files in other folders)
