[project]
name = "ieacc"
version = "0.1.0"
description = "API for the Irish Open Transparency Graph"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "neo4j>=5.27",
    "pydantic[email]>=2.10",
    "pyjwt[crypto]>=2.9",
    "bcrypt>=4.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "anyio>=4.0",
    "httpx>=0.27",
    "mypy>=1.13",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ieacc"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["TCH003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["TCH002"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["ieacc"]
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: requires running Neo4j instance",
]
